Add member password reset Api, unit test, model, swagger Docs file, Route
